camel-core: fixed warnings about deprecated usages
- fixed most usages of deprecated getOut in test code
- fixed usages of matchesMockWaitTime
- removed usages of clearBody and clearHeaders methods
- added suppress warnings to avoid false positives on IntrospectionSupportTest
- fixed warnings about deprecated Integer constructor
- fixed warnings about deprecated Long constructor
- fixed warnings about usages of inOut and inOnly methods
- fixed usages of deprecated sampling definition methods
- fixed usages of AbstractAppender constructor